--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss-cli@latest build css/tailwind.css -o public/css/style.css"
+    "build": "npx tailwindcss-cli@latest build src/css/tailwind.css -o public/css/style.css",
+    "tw:build": "tailwind -i ./src/css/tailwind.css -o ./pub/css/tailwind.css"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,13 @@
   },
   "homepage": "https://github.com/daitomiun/tailwind-css#readme",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.1",
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13"
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18"
+  },
+  "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0"
   }
 }
