--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss-cli@latest build src/css/tailwind.css -o public/css/style.css",
-    "tw:build": "tailwind -i ./src/css/tailwind.css -o ./pub/css/tailwind.css"
+    "build": "npx tailwindcss-cli@latest -i build ./src/css/tailwind.css -o public/css/style.css",
+    "tw:build": "tailwind -i ./src/css/tailwind.css -o ./pub/css/tailwind.css --watch"
   },
   "repository": {
     "type": "git",
